--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Oswald:wght@400;600;700&display=swap&subset=latin,vietnamese" rel="stylesheet">
 </head>
-<body>
+<body class="home">
 	<div id="main" class="scroll-container">
 		<section class="section section-hero  h-100"><!-- Frame 1 -->
 			<div class="container h-100">
