Add link to blog title
- Add link to blog title (home/blog template)
- Refine css

--- a/blog.html
+++ b/blog.html
@@ -95,9 +95,9 @@
 									</a>
 								</div>
 								<div class="col-sm-7 align-self-center">
-									<h3 class="title">Tiêu đề bài viết</h3>
+									<a href="#"><h3 class="title">Tiêu đề bài viết</h3>
 									<div class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim sed tempus, malesuada mi, integ...</div>
-									<div class="datetime">Ngày đăng: 21/03/2021</div>
+									<div class="datetime">Ngày đăng: 21/03/2021</div></a>
 								</div>
 							</div>
 							<div class="item row align-content-center"><!-- Post item -->
@@ -107,9 +107,9 @@
 									</a>
 								</div>
 								<div class="col-sm-7 align-self-center">
-									<h3 class="title">Tiêu đề bài viết</h3>
+									<a href="#"><h3 class="title">Tiêu đề bài viết</h3>
 									<div class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim sed tempus, malesuada mi, integ...</div>
-									<div class="datetime">Ngày đăng: 21/03/2021</div>
+									<div class="datetime">Ngày đăng: 21/03/2021</div></a>
 								</div>
 							</div>
 							<div class="item row align-content-center"><!-- Post item -->
@@ -119,9 +119,9 @@
 									</a>
 								</div>
 								<div class="col-sm-7 align-self-center">
-									<h3 class="title">Tiêu đề bài viết</h3>
+									<a href="#"><h3 class="title">Tiêu đề bài viết</h3>
 									<div class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim sed tempus, malesuada mi, integ...</div>
-									<div class="datetime">Ngày đăng: 21/03/2021</div>
+									<div class="datetime">Ngày đăng: 21/03/2021</div></a>
 								</div>
 							</div>
 							<div class="item row align-content-center"><!-- Post item -->
@@ -131,9 +131,9 @@
 									</a>
 								</div>
 								<div class="col-sm-7 align-self-center">
-									<h3 class="title">Tiêu đề bài viết</h3>
+									<a href="#"><h3 class="title">Tiêu đề bài viết</h3>
 									<div class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim sed tempus, malesuada mi, integ...</div>
-									<div class="datetime">Ngày đăng: 21/03/2021</div>
+									<div class="datetime">Ngày đăng: 21/03/2021</div></a>
 								</div>
 							</div>
 							<div class="item row align-content-center"><!-- Post item -->
@@ -143,9 +143,9 @@
 									</a>
 								</div>
 								<div class="col-sm-7 align-self-center">
-									<h3 class="title">Tiêu đề bài viết</h3>
+									<a href="#"><h3 class="title">Tiêu đề bài viết</h3>
 									<div class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim sed tempus, malesuada mi, integ...</div>
-									<div class="datetime">Ngày đăng: 21/03/2021</div>
+									<div class="datetime">Ngày đăng: 21/03/2021</div></a>
 								</div>
 							</div>
 						</div>
