--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 						</div>
 						<div class="item">
 							<div class="p-col p-second content">
-								<h3 class="title">SME800</h3>
+								<h3 class="title">SELF – EMPLOYEE MARKET 100</h3>
 								<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim urna pellentesque purus proin at maecenas volutpat. Cursus semper duis varius interdum. Semper et parturient purus nec massa facilisis eu.</div>
 								<hr class="hr-top" />
 								<p>Hạn mức vay lên đến</p>
@@ -370,30 +370,30 @@
 					<div class="owl-carousel owl-theme home_blog_carousel mb-5">
 						<div class="item">
 							<a href="#"><div class="thumb" style="background-image:url('/assets/img/sample_thumb.jpg')"></div></a>
-							<div class="info">
+							<a href="#"><div class="info">
 								<h3>Lorem ipsum dolor sit amet</h3>
 								<div class="excerpt">
 									Gareth Bale xem việc tập trung thi đấu, thay vì đếm xỉa đến những chỉ trích, là chìa khoá giúp anh chói sáng...
 								</div>
-							</div>
+							</div></a>
 						</div>
 						<div class="item">
 							<a href="#"><div class="thumb" style="background-image:url('/assets/img/sample_thumb.jpg')"></div></a>
-							<div class="info">
+							<a href="#"><div class="info">
 								<h3>Lorem ipsum dolor sit amet</h3>
 								<div class="excerpt">
 									Gareth Bale xem việc tập trung thi đấu, thay vì đếm xỉa đến những chỉ trích, là chìa khoá giúp anh chói sáng...
 								</div>
-							</div>
+							</div></a>
 						</div>
 						<div class="item">
 							<a href="#"><div class="thumb" style="background-image:url('/assets/img/sample_thumb.jpg')"></div></a>
-							<div class="info">
+							<a href="#"><div class="info">
 								<h3>Lorem ipsum dolor sit amet</h3>
 								<div class="excerpt">
 									Gareth Bale xem việc tập trung thi đấu, thay vì đếm xỉa đến những chỉ trích, là chìa khoá giúp anh chói sáng...
 								</div>
-							</div>
+							</div></a>
 						</div>
 					</div>
 				</div>
@@ -515,9 +515,5 @@
 	<script src="/assets/js/slick.min.js" type="text/javascript"></script>
 	<script src="/assets/js/full-page-scroll.js" type="text/javascript"></script>
 	<script src="/assets/js/script.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		$(document).ready(function () {
 
-		});
-	</script>
 </body>
