--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 			<div class="container h-100">
 				<div class="row h-100">
 					<div class="col-12 col-md-6 col-lg-5 col-xl-5 column1 align-self-end">
-						<h3 class="hero-title">Vay tiền đơn giản với <span>Verig</span></h3>
+						<h3 class="hero-title">Đầu tư đơn giản với <span>Verig</span></h3>
 						<div class="box-cal-temp">
 							<div class="row">
-								<div class="col-6 label">Số tiền vay</div>
+								<div class="col-6 label">Số tiền đầu tư</div>
 								<div class="col-6 text-right cal-number"><span id="output_money" data-myRange1="">2000000</span></div>
 							</div>
 							<div class="cal-range">
@@ -46,7 +46,7 @@
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-6 label">Tháng vay</div>
+								<div class="col-6 label">Tháng đầu tư</div>
 								<div class="col-6 text-right cal-number"><span id="output_month" data-myRange2="">2</span> tháng</div>
 							</div>
 							<div class="cal-range">
@@ -60,7 +60,7 @@
 								<div class="col-12 col-md-6">
 									<div class="d-flex">
 										<div class="cal-number">0<span>%</span></div>
-										<div class="cal-des">Ưu đãi lãi và phí cho khoản vay đầu tiên</div>
+										<div class="cal-des">Ưu đãi lãi và phí cho khoản đầu tư đầu tiên</div>
 									</div>
 								</div>
 								<div class="col-12 col-md-6 text-right">
@@ -99,8 +99,8 @@
 					<thead>
 						<tr>
 							<th>
-								Danh sách đơn xin vay mới nhất
-								<span class="float-right"><a href="#" class="btn-reg">Đăng ký vay ngay <i class="fa fa-arrow-right"></i></a></span>
+								Danh sách đầu tư mới nhất
+								<span class="float-right"><a href="#" class="btn-reg">Đăng ký đầu tư ngay <i class="fa fa-arrow-right"></i></a></span>
 							</th>
 							<th>Thống kê</th>
 						</tr>
@@ -128,21 +128,21 @@
 								<div class="d-flex statistics">
 									<div class="cover"><img src="/assets/img/icon-certificate.png"></div>
 									<div class="info">
-										<h3 class="title">Đơn vay mới trong ngày</h3>
+										<h3 class="title">Đơn đầu tư mới trong ngày</h3>
 										<div class="number">1,996</div>
 									</div>
 								</div>
 								<div class="d-flex statistics">
 									<div class="cover"><img src="/assets/img/icon-certificate.png"></div>
 									<div class="info">
-										<h3 class="title">Đơn vay mới trong ngày</h3>
+										<h3 class="title">Đơn đầu tư mới trong ngày</h3>
 										<div class="number">67,996</div>
 									</div>
 								</div>
 								<div class="d-flex statistics">
 									<div class="cover"><img src="/assets/img/icon-headhunter.png"></div>
 									<div class="info">
-										<h3 class="title">Tổng đơn vay trên hệ thống</h3>
+										<h3 class="title">Tổng đơn đầu tư trên hệ thống</h3>
 										<div class="number">1,241,996</div>
 									</div>
 								</div>
@@ -163,7 +163,7 @@
 								<div class="d-flex statistics">
 									<div class="cover"><img src="/assets/img/icon-profile.png"></div>
 									<div class="info">
-										<h3 class="title">Số người đăng ký vay</h3>
+										<h3 class="title">Số người đăng ký đầu tư</h3>
 										<div class="number">790,395</div>
 									</div>
 								</div>
@@ -327,7 +327,7 @@
 								<h3 class="title">SME1000</h3>
 								<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim urna pellentesque purus proin at maecenas volutpat. Cursus semper duis varius interdum. Semper et parturient purus nec massa facilisis eu.</div>
 								<hr class="hr-top" />
-								<p>Hạn mức vay lên đến</p>
+								<p>Hạn mức đầu tư lên đến</p>
 								<div class="number">200.000.000</div>
 							</div>
 						</div>
@@ -336,7 +336,7 @@
 								<h3 class="title">SELF – EMPLOYEE MARKET 100</h3>
 								<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim urna pellentesque purus proin at maecenas volutpat. Cursus semper duis varius interdum. Semper et parturient purus nec massa facilisis eu.</div>
 								<hr class="hr-top" />
-								<p>Hạn mức vay lên đến</p>
+								<p>Hạn mức đầu tư lên đến</p>
 								<div class="number">200.000.000</div>
 							</div>
 						</div>
@@ -345,7 +345,7 @@
 								<h3 class="title">SME800</h3>
 								<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim urna pellentesque purus proin at maecenas volutpat. Cursus semper duis varius interdum. Semper et parturient purus nec massa facilisis eu.</div>
 								<hr class="hr-top" />
-								<p>Hạn mức vay lên đến</p>
+								<p>Hạn mức đầu tư lên đến</p>
 								<div class="number">200.000.000</div>
 							</div>
 						</div>
@@ -354,7 +354,7 @@
 								<h3 class="title">SME800</h3>
 								<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim urna pellentesque purus proin at maecenas volutpat. Cursus semper duis varius interdum. Semper et parturient purus nec massa facilisis eu.</div>
 								<hr class="hr-top" />
-								<p>Hạn mức vay lên đến</p>
+								<p>Hạn mức đầu tư lên đến</p>
 								<div class="number">200.000.000</div>
 							</div>
 						</div>
@@ -410,7 +410,7 @@
 					<div class="col-md-6 p-0 align-self-center">
 						<div class="content">
 							<h2>Tải ngay Verig</h2>
-							<p>Verig đã có ứng dụng dành trên App Store và Google Play, giúp việc vay tiền và quản lý tài chỉnh trở nên thật dễ dàng!</p>
+							<p>Verig đã có ứng dụng dành trên App Store và Google Play, giúp việc đầu tư tiền và quản lý tài chỉnh trở nên thật dễ dàng!</p>
 							<div class="dl-link d-flex">
 								<div class="qrcode"><a href="#"><img src="/assets/img/qrcode.png" alt="QR Code"></a></div>
 								<div class="store">
