Update register template
- Add template register & otp-input

--- a/index.html
+++ b/index.html
@@ -515,5 +515,108 @@
 	<script src="/assets/js/slick.min.js" type="text/javascript"></script>
 	<script src="/assets/js/full-page-scroll.js" type="text/javascript"></script>
 	<script src="/assets/js/script.js" type="text/javascript"></script>
-
+	<script type="text/javascript">
+	$(document).ready(function () {
+		// Owl Carousel
+		$(".home_testimonial_carousel").owlCarousel({
+			loop:false,
+			margin:15,
+			nav:false,
+			autoplay: false,
+			responsiveClass:true,
+			dots:false,
+			responsive:{
+				0:{
+					items:1,
+					nav:false,
+					dots:false,
+					margin: 5,
+					stagePadding: 30,
+				},
+				600:{
+					items:3,
+					nav:false
+				},
+				1000:{
+					items:3,
+				}
+			}
+		});
+		
+		$(".home_blog_carousel").owlCarousel({
+			loop:false,
+			margin:15,
+			nav:false,
+			autoplay: false,
+			responsiveClass:true,
+			dots:false,
+			responsive:{
+				0:{
+					items:1,
+					nav:false,
+					dots:false,
+					margin: 5,
+					stagePadding: 30,
+				},
+				600:{
+					items:3,
+					nav:false
+				},
+				1000:{
+					items:3,
+				}
+			}
+		});
+		
+		$(".products-slider").owlCarousel({
+			loop:false,
+			margin:25,
+			center: true,
+			nav:false,
+			autoplay: false,
+			responsiveClass:true,
+			dots:false,
+			responsive:{
+				0:{
+					items:1,
+					nav:false,
+					dots:false,
+					margin: 5,
+					stagePadding: 30,
+				},
+				600:{
+					items:3,
+					nav:false
+				},
+				1000:{
+					items:3,
+				}
+			}
+		});	
+		
+		$(".auth_slide").owlCarousel({
+			loop:false,
+			margin:25,
+			center: true,
+			nav:true,
+			autoplay: true,
+			responsiveClass:true,
+			dots:false,
+			items:1,
+			responsive:{
+				0:{
+					items:1,
+					margin: 5,
+				},
+				600:{
+					items:1,
+					nav:false
+				},
+				1000:{
+					items:1,
+				}
+			}
+		});
+	});
+	</script>
 </body>
