--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 		</section>
 		
 		<section class="section section-blog">
-			<div class="container h-100 d-flex">
+			<div class="container h-100 d-flex flex-column">
 				<div class="align-self-center">
 					<h2>Blog</h2>
 					<div class="owl-carousel owl-theme home_blog_carousel mb-5">
@@ -397,8 +397,8 @@
 						</div>
 					</div>
 				</div>
+				<div class="text-center mt-4"><a href="#" class="btn btn-readmore">Xem thêm blog</a></div>
 			</div>
-			<div class="container"><div class="text-center"><a href="#" class="btn btn-readmore">Xem thêm blog</a></div></div>
 		</section>
 		
 		<section class="section section-download">
