--- a/index.html
+++ b/index.html
@@ -365,9 +365,18 @@
 		
 		<section class="section section-blog">
 			<div class="container h-100 d-flex flex-column">
-				<div class="align-self-center">
+				<div class="r">
 					<h2>Blog</h2>
-					<div class="owl-carousel owl-theme home_blog_carousel mb-5">
+					<div class="owl-carousel owl-theme home_blog_carousel mb-2">
+						<div class="item">
+							<a href="#"><div class="thumb" style="background-image:url('/assets/img/sample_thumb.jpg')"></div></a>
+							<a href="#"><div class="info">
+								<h3>Lorem ipsum dolor sit amet</h3>
+								<div class="excerpt">
+									Gareth Bale xem việc tập trung thi đấu, thay vì đếm xỉa đến những chỉ trích, là chìa khoá giúp anh chói sáng...
+								</div>
+							</div></a>
+						</div>
 						<div class="item">
 							<a href="#"><div class="thumb" style="background-image:url('/assets/img/sample_thumb.jpg')"></div></a>
 							<a href="#"><div class="info">
@@ -397,7 +406,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="text-center mt-4"><a href="#" class="btn btn-readmore">Xem thêm blog</a></div>
+				<div class="text-center"><a href="#" class="btn btn-readmore">Xem thêm blog</a></div>
 			</div>
 		</section>
 		
